# NazoAuth

./: .cnb.yml  .dockerignore  .env.example  .env.yaml.example  .gitignore  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  Containerfile  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  codecov.yml  compose.oidf.local.yml  compose.yml  deny.toml  docker-compose.hydra.perf.yml  docker-compose.keycloak.perf.yml  docker-compose.perf.yml  env.yaml.example  renovate.json
crates/auth/: Cargo.toml
crates/auth/src/: admin_grants.rs  authorization_details.rs  authorization_policy.rs  authorization_request.rs  authorization_service.rs  ciba.rs  client_assertion.rs  client_authentication.rs  client_registration.rs  client_secret.rs  dpop.rs  dynamic_client_registration.rs  extension_grants.rs  lib.rs  logout_service.rs  oidc_logout.rs  profile.rs  resource_indicator.rs  session_management.rs  signing.rs  token.rs  token_endpoint.rs  token_service.rs  transaction.rs
crates/auth/src/admin_clients/: mod.rs  validation.rs
crates/auth/src/metadata/: document.rs  document_tests.rs
crates/auth/tests/: claims_contract.rs  client_assertion_core.rs  logout_service.rs  metadata.rs  source_boundary.rs
crates/authorization-server/: Cargo.toml
crates/authorization-server/src/: cli.rs  config.rs  keyctl.rs  lib.rs  main.rs  runtime_modules.rs  schema.rs  settings.rs
crates/authorization-server/src/adapters/: audit.rs  email.rs  email_templates.rs  mod.rs  security.rs
crates/authorization-server/src/bootstrap/: cors.rs  federation_services.rs  mod.rs  observability.rs  profile_services.rs  (+2 more)
crates/authorization-server/tests/: openid4vc_oidf_seed.rs
crates/digital-credentials/: Cargo.toml
crates/digital-credentials/src/: dcql.rs  format.rs  jose.rs  jwe.rs  lib.rs  trust.rs
crates/digital-credentials/tests/: domain_contract.rs  jwe_contract.rs
crates/http-actix/: Cargo.toml
crates/http-actix/src/: authorization_decision.rs  authorization_request_object.rs  cookies.rs  cors.rs  csrf.rs  dpop.rs  dynamic_client_registration.rs  extract.rs  fapi_resource.rs  form_post_response.rs  lib.rs  local_registration.rs  metadata.rs  mfa_profile.rs  middleware.rs  oidc_logout.rs  passkey.rs  password_login.rs  presenter.rs  profile_account.rs  request_context.rs  runtime_modules.rs  scim.rs  session.rs  session_management.rs  token_client_auth.rs  token_forms.rs  token_management.rs  userinfo.rs
crates/http-actix/tests/: authorization_decision_transport.rs  client_ip.rs  forbidden_dependencies.rs  form_post_response.rs  mfa_profile_transport.rs  oidc_logout_transport.rs  presenter_contract.rs  scim_transport.rs  token_client_auth_transport.rs
crates/http-signatures/: Cargo.toml
crates/http-signatures/src/: digest.rs  error.rs  jwk.rs  lib.rs  request.rs  response.rs  verify.rs
crates/http-signatures/tests/: crate_identity.rs  request.rs  response.rs  verify_request.rs
crates/identity/: Cargo.toml
crates/identity/src/: access_request.rs  admin.rs  audit.rs  authentication.rs  avatar.rs  email.rs  federation.rs  lib.rs  mfa.rs  mfa_service.rs  model.rs  mtls_trust.rs  passkey.rs  ports.rs  profile.rs  registration.rs  scim.rs  session.rs  tenancy.rs
crates/identity/tests/: access_request_validation.rs  admin_policy.rs  dependency_boundary.rs  model.rs  password_authentication.rs  policy.rs  repository_ports.rs  scim_core.rs  scim_service.rs
crates/key-management/: Cargo.toml
crates/key-management/src/: authorization_response.rs  client_registration.rs  external.rs  jwks.rs  lib.rs  lifecycle.rs  local.rs  model.rs  mtls_trust.rs  store.rs  token.rs
crates/key-management/tests/: mtls_trust.rs  purpose_scoped_keys.rs
crates/openid4vc-http-actix/: Cargo.toml
crates/openid4vc-http-actix/src/: lib.rs  vci.rs  vp.rs
crates/openid4vc-http-actix/tests/: transport_contract.rs
crates/openid4vci/: Cargo.toml
crates/openid4vci/src/: lib.rs  metadata.rs  model.rs  offer.rs  proof.rs  service.rs  store.rs
crates/openid4vci/tests/: protocol_contract.rs  service_contract.rs
crates/openid4vp/: Cargo.toml
crates/openid4vp/src/: lib.rs  model.rs  policy.rs  service.rs  store.rs
crates/openid4vp/tests/: protocol_contract.rs  service_contract.rs
crates/persistence-postgres/: Cargo.toml
crates/persistence-postgres/src/: lib.rs  oidf_seed.rs  pool.rs  schema.rs
crates/persistence-postgres/tests/: access_requests.rs  auth_repositories.rs  identity_repositories.rs  migrations.rs  mtls_trust.rs  oauth_client_dcr.rs  oidc_logout.rs  oidf_seed.rs  openid4vc.rs  pool_async_contract.rs  runtime_modules.rs  scim_security_events.rs
crates/postgres/: Cargo.toml
crates/postgres/src/: lib.rs  oidf_seed.rs  pool.rs  schema.rs
crates/postgres/tests/: access_requests.rs  auth_repositories.rs  identity_repositories.rs  migrations.rs  oidf_seed.rs  runtime_modules.rs
crates/resource-server/: Cargo.toml
crates/resource-server/src/: dpop.rs  jwk.rs  lib.rs  presentation.rs  service.rs
crates/resource-server/tests/: dependency_boundary.rs
crates/runtime-capabilities/: Cargo.toml
crates/runtime-capabilities/src/: catalog.rs  lease.rs  lib.rs  management.rs  model.rs  reconcile.rs  registry.rs  repository.rs  snapshot.rs  transition.rs
crates/runtime-capabilities/tests/: disable_policies.rs  lease.rs  revision_races.rs  state_machine.rs
crates/runtime-modules/: Cargo.toml
crates/runtime-modules/src/: lib.rs  policy.rs  reconcile.rs  registry.rs  repository.rs  snapshot.rs  transition.rs
crates/runtime-modules/tests/: revision_races.rs  state_machine.rs
crates/scim-events/: Cargo.toml
crates/scim-events/src/: lib.rs
crates/scim-events/tests/: domain_contract.rs
crates/valkey/: Cargo.toml
crates/valkey/src/: authentication.rs  authorization.rs  authorization_state.rs  command.rs  delivery.rs  device.rs  error.rs  keys.rs  lib.rs  replay.rs  session.rs  test_support.rs  token_issuance.rs  token_state.rs
crates/valkey/tests/: authorization_contract.rs  ciba_device_contract.rs  delivery_contract.rs  replay_contract.rs  session_contract.rs
(+1493 files in other folders)
