[workspace]
members = [
    "crates/server",
    "crates/fapi-http-signatures",
    "crates/runtime-modules",
]
default-members = ["crates/server"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/nazozero/NazoAuth"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
