[workspace]
members = [
    "crates/authorization-server-core",
    "crates/digital-credentials",
    "crates/key-management",
    "crates/openid4vci",
    "crates/openid4vp",
    "crates/openid4vc-http-actix",
    "crates/persistence-postgres",
    "crates/authorization-server",
    "crates/http-signatures",
    "crates/http-actix",
    "crates/identity",
    "crates/runtime-capabilities",
    "crates/resource-server",
    "crates/scim-events",
    "crates/state-store-valkey",
]
default-members = ["crates/authorization-server"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/nazozero/NazoAuth"

[workspace.dependencies]
actix-cors = "0.7.1"
actix-web = "4.14.0"
anyhow = "1.0.103"
aes-gcm = "0.11.0-rc.2"
arc-swap = "1.8.2"
argon2 = "0.5.3"
base64 = "0.22.1"
blake3 = "1.8.5"
chrono = "0.4.45"
diesel = "2.3.11"
diesel-async = "0.9.2"
diesel_migrations = "2.3.2"
ed25519-dalek = "3.0.0"
fred = "10.1.0"
flate2 = "1.1.9"
futures-util = "0.3.32"
futures-executor = "0.3.32"
hmac = "0.13.0"
jsonwebtoken = { version = "10.4.0", default-features = false }
mdoc-rs = { version = "0.2.0", default-features = false, features = ["issue"] }
coset = "0.3.8"
ciborium = "0.2.2"
lettre = { version = "0.11.22", default-features = false }
nazo-auth = { version = "0.1.0", path = "crates/authorization-server-core" }
nazo-digital-credentials = { version = "0.1.0", path = "crates/digital-credentials" }
nazo-http-actix = { version = "0.1.0", path = "crates/http-actix" }
nazo-http-signatures = { version = "0.1.0", path = "crates/http-signatures" }
nazo-identity = { version = "0.1.0", path = "crates/identity" }
nazo-key-management = { version = "0.1.0", path = "crates/key-management" }
nazo-openid4vci = { version = "0.1.0", path = "crates/openid4vci" }
nazo-openid4vp = { version = "0.1.0", path = "crates/openid4vp" }
nazo-openid4vc-http-actix = { version = "0.1.0", path = "crates/openid4vc-http-actix" }
nazo-postgres = { version = "0.1.0", path = "crates/persistence-postgres" }
nazo-resource-server = { version = "0.1.0", path = "crates/resource-server" }
nazo-runtime-modules = { version = "0.1.0", path = "crates/runtime-capabilities" }
nazo-scim-events = { version = "0.1.0", path = "crates/scim-events" }
nazo-valkey = { version = "0.1.0", path = "crates/state-store-valkey" }
openssl = "0.10.81"
p256 = "0.14.0"
passkey-auth = "0.1.3"
proptest = "1"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1.44"
url = "2.5.8"
urlencoding = "2.1.3"
uuid = "1.23.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
