[package]
name = "nazo-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
nazo-runtime-modules = { version = "0.1.0", path = "../runtime-modules" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
url = "2.5.8"
uuid = { version = "1.23.4", features = ["v7", "serde"] }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
