[package]
name = "nazo-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
hmac.workspace = true
nazo-identity.workspace = true
nazo-runtime-modules.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v7", "serde"] }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
