[package]
name = "nazo-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
blake3.workspace = true
chrono = { workspace = true, features = ["serde"] }
hmac.workspace = true
jsonwebtoken = { workspace = true, features = ["aws_lc_rs", "use_pem"] }
nazo-identity.workspace = true
nazo-runtime-modules.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
subtle = "2.6.1"
url.workspace = true
uuid = { workspace = true, features = ["v7", "serde"] }

[dev-dependencies]
ed25519-dalek.workspace = true
futures-executor.workspace = true
futures-util.workspace = true
proptest.workspace = true

[lints]
workspace = true
