[package]
name = "nazo-digital-credentials"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
flate2.workspace = true
p256 = { workspace = true, features = ["ecdh"] }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["serde", "v7"] }

[lints]
workspace = true
