[package]
name = "nazo-http-actix"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix-web = { version = "4.14.0", features = ["cookies"] }
actix-cors = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
url = "2.5.8"
nazo-auth = { version = "0.1.0", path = "../auth" }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
