[package]
name = "nazo-http-actix"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix-web = { workspace = true, features = ["cookies"] }
actix-cors.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
url.workspace = true
nazo-auth.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
