[package]
name = "nazo-http-signatures"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
httpsig = "0.0.24"
sfv = "0.15.0"
sha2.workspace = true
subtle = "2.6.1"
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
