[package]
name = "nazo-identity"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
hmac = "0.13.0"
lettre = { version = "0.11.22", default-features = false }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
urlencoding = "2.1.3"
uuid = { version = "1.23.4", features = ["v7", "serde"] }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt"] }
