[package]
name = "nazo-identity"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
blake3.workspace = true
chrono = { workspace = true, features = ["serde"] }
hmac.workspace = true
lettre.workspace = true
passkey-auth.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha1 = "0.11.0"
sha2.workspace = true
tracing.workspace = true
urlencoding.workspace = true
uuid = { workspace = true, features = ["v7", "serde"] }
url.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
