[package]
name = "nazo-key-management"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
test-support = []

[dependencies]
arc-swap.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
der.workspace = true
ed25519-dalek.workspace = true
jsonwebtoken = { workspace = true, features = ["aws_lc_rs", "use_pem"] }
nazo-auth.workspace = true
openssl.workspace = true
p256 = { workspace = true, features = ["ecdsa", "pkcs8"] }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v7", "serde"] }
x509-cert.workspace = true
x509-parser.workspace = true

[lints]
workspace = true
