[package]
name = "nazo-openid4vc-http-actix"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix-web.workspace = true
chrono.workspace = true
nazo-digital-credentials.workspace = true
nazo-openid4vci.workspace = true
nazo-openid4vp.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
