[package]
name = "nazo-openid4vci"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
blake3.workspace = true
nazo-digital-credentials.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
