[package]
name = "nazo-openid4vp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
nazo-digital-credentials.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true
ciborium.workspace = true
sha2.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["serde", "v7"] }

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
