[package]
name = "nazo-postgres"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.103"
argon2 = "0.5.3"
chrono = { version = "0.4.45", features = ["serde"] }
diesel = { version = "2.3.10", features = ["postgres", "uuid", "chrono", "serde_json", "64-column-tables"] }
diesel-async = { version = "0.9.2", features = ["postgres", "deadpool"] }
diesel_migrations = "2.3.2"
nazo-identity = { version = "0.1.0", path = "../identity" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.4", features = ["v7", "serde"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
