[package]
name = "nazo-postgres"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono = { workspace = true, features = ["serde"] }
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "64-column-tables"] }
diesel-async = { workspace = true, features = ["postgres", "deadpool"] }
diesel_migrations.workspace = true
nazo-identity.workspace = true
nazo-auth.workspace = true
nazo-runtime-modules.workspace = true
nazo-resource-server.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt"] }
uuid = { workspace = true, features = ["v7", "serde"] }

[dev-dependencies]
argon2.workspace = true
syn = { version = "2.0.118", features = ["full", "visit"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

[lints]
workspace = true
