[package]
name = "nazo-resource-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
chrono = "0.4.45"
http = "1.4.2"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["aws_lc_rs", "use_pem"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
url = "2.5.8"

[dev-dependencies]
ed25519-dalek = "2.2"
openssl = "0.10.81"
p256 = { version = "0.14.0", features = ["ecdsa", "pkcs8"] }

[lints]
workspace = true
