[package]
name = "nazo-resource-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
http = "1.4.2"
jsonwebtoken = { workspace = true, features = ["aws_lc_rs", "use_pem"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
url.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
openssl.workspace = true
p256 = { workspace = true, features = ["ecdsa", "pkcs8"] }

[lints]
workspace = true
