[package]
name = "nazo-runtime-modules"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
futures-util.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
uuid = { workspace = true, features = ["v7"] }

[lints]
workspace = true
