[package]
name = "nazo-valkey"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1.8.5"
fred = { version = "10.1.0", features = ["i-scripts"] }
nazo-identity = { version = "0.1.0", path = "../identity" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.4", features = ["v7", "serde"] }

[lints]
workspace = true
