[package]
name = "nazo-valkey"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
chrono.workspace = true
fred = { workspace = true, features = ["i-scripts"] }
nazo-auth.workspace = true
nazo-identity.workspace = true
nazo-resource-server.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
futures-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true, features = ["v7", "serde"] }

[lints]
workspace = true
